--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -41,6 +41,12 @@
       <button id="runOcrAllBtn" type="button">Run OCR on ALL</button>
     </div>
 
+    <div class="row" style="margin-top:8px">
+    <button id="deleteImageBtn" type="button">Delete selected image</button>
+    <button id="deleteAllImagesBtn" type="button">Delete ALL images</button>
+    </div>
+
+
     <h2>Export</h2>
     <div class="row">
       <button id="downloadCsvBtn" type="button" disabled>Download CSV (selected)</button>
@@ -63,7 +69,7 @@
     </select>
   </label>
   <label>Lens:
-    <input type="range" id="lensSize" min="120" max="500" step="20" value="200">
+    <input type="range" id="lensSize" min="120" max="500" step="20" value="300">
     <span id="lensSizeVal">200</span>px
   </label>
   <label>Zoom:
